--- a/public/styles/css/slideshow.css
+++ b/public/styles/css/slideshow.css
@@ -10,6 +10,8 @@ body {
 }
 img {
   vertical-align: middle;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 /* Slideshow container */
@@ -57,7 +59,7 @@ img {
   -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
   position: absolute;
-  bottom: 60px;
+  bottom: 70px;
   left: 10px;
   background: rgba(0, 0, 0, 0.8);
   margin: 0;
@@ -83,6 +85,7 @@ img {
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+  margin-bottom: 20px;
 }
 
 .dot-container {
